work from past time im a ghost of XMas past

--- a/_notebooks/2023-10-04-VariablesTeaching.ipynb
+++ b/_notebooks/2023-10-04-VariablesTeaching.ipynb
@@ -102,11 +102,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "['Howie', 'Jayden', 'Nihar', 'Will']\n",
+      "True\n",
+      "Howie\n"
+     ]
+    }
+   ],
    "source": [
-    " "
+    "# Variable 1\n",
+    "\n",
+    "numFamily = 4\n",
+    "print(numFamily)\n",
+    "\n",
+    "# Variable 2\n",
+    "\n",
+    "bestFriends = [\"Howie\", \"Jayden\", \"Nihar\", \"Will\"]\n",
+    "print(bestFriends)\n",
+    "\n",
+    "# Variable 3\n",
+    "\n",
+    "sushibeatspizza = True\n",
+    "print(sushibeatspizza)\n",
+    "\n",
+    "# Variable 4\n",
+    "\n",
+    "name = \"Howie\"\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[\"Suhsi\", \"Burgers\", \"Pizza\", \"Candy Corn\"]\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "lst = [\"Suhsi\",\"Burgers\",\"Pizza\",\"Candy Corn\"]\n",
+    "print(type(lst))\n",
+    "a = json.dumps(lst)\n",
+    "print(a)\n",
+    "print(type(a))\n"
    ]
   }
  ],
