--- a/_notebooks/2023-10-03-CalCalc-frontend.ipynb
+++ b/_notebooks/2023-10-03-CalCalc-frontend.ipynb
@@ -10,6 +10,7 @@
     "title: JS Frontend\n",
     "type: hacks\n",
     "permalink: /CalCalc/frontend\n",
+    "courses: { compsci: {week: 7} }\n",
     "---"
    ]
   },
