--- a/_notebooks/2023-10-03-CalCalc-python.ipynb
+++ b/_notebooks/2023-10-03-CalCalc-python.ipynb
@@ -10,14 +10,8 @@
     "title: Python Backend\n",
     "type: hacks\n",
     "permalink: /CalCalc/python\n",
+    "courses: { compsci: {week: 7} }\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "{% include nav_CalCalc.html %}"
    ]
   },
   {
