--- a/_notebooks/2023-10-12-Iteration.ipynb
+++ b/_notebooks/2023-10-12-Iteration.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Iteration\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 8} }\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Team Tech Talk: Iteration"
    ]
   },
