--- a/_notebooks/2023-10-26-Libraries.ipynb
+++ b/_notebooks/2023-10-26-Libraries.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Libraries\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 9} }\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.12-3.13 Developing Procedures\n",
     "*before we do this lesson, you will want to open a terminal on your desktop and pip install Requests, Pillow, Pandas, NumPy, Scikit-Learn, Tensorflow, and matplotlib. "
    ]
