--- a/_notebooks/2023-10-27-SimutationsTT.ipynb
+++ b/_notebooks/2023-10-27-SimutationsTT.ipynb
@@ -166,6 +166,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Algorithmic Efficiency\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 11} }\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.17 Algorithmic Efficiency\n",
     "- A problem is a general description of a task that can (or cannot) be solved algorithmically\n",
     "    - A decision problem is a problem with a yes/no answer\n",
