--- a/_notebooks/2023-11-06-Individual_final.ipynb
+++ b/_notebooks/2023-11-06-Individual_final.ipynb
@@ -7,11 +7,25 @@
     "---\n",
     "comments: true\n",
     "layout: post\n",
-    "title: Python Backend\n",
+    "title: Individual Final\n",
     "type: hacks\n",
     "permalink: /CalCalc/python\n",
     "courses: { compsci: {week: 12} }\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# My Individual Project Final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contributions Below"
    ]
   },
   {
@@ -58,7 +72,81 @@
     "In my Passion Project, I worked with Jayden, Will, and Nihar. I contributed by making the meal plan, and suggesting the idea of when calculation of calories fall  within the limits, will put you into a group to see meal plan. Above I worked on python as well...\n",
     "<br>\n",
     "- Code above represents me adding the calories maintence and meal plan into user data base\n",
-    "- Allows for better user interface and neat chart to see how much you (username) needs to consume."
+    "- Allows for better user interface and neat chart to see how much you (username) needs to consume.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What went wrong:\n",
+    "- API and backened were not coopoerating\n",
+    "- Tons of merging errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What went right (fixed): \n",
+    "- Made it local and easily accsessible to people\n",
+    "- Able to communicate with teamates to commit and pull with eachother"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What I have learned\n",
+    "- One of my favorite types of codes to learn about and put into action are the number sorting statements, called algorithims\n",
+    "- How the numbers are being sorted intrigue me"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n <= 0:\n",
+    "        return []\n",
+    "    elif n == 1:\n",
+    "        return [0]\n",
+    "    elif n == 2:\n",
+    "        return [0, 1]\n",
+    "    else:\n",
+    "        fib_sequence = [0, 1]\n",
+    "        while len(fib_sequence) < n:\n",
+    "            next_number = fib_sequence[-1] + fib_sequence[-2]\n",
+    "            fib_sequence.append(next_number)\n",
+    "        return fib_sequence\n",
+    "\n",
+    "n = 10\n",
+    "result = fibonacci(n)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reflection of Quiz"
    ]
   }
  ],
