--- a/_notebooks/2023-10-06-boolean_if.ipynb
+++ b/_notebooks/2023-10-06-boolean_if.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Boolean\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 8} }\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Boolean If:\n",
     "## 3.5 & 3.6 Boolean Expressions & Conditionals"
    ]
