--- a/_notebooks/2023-10-18-DTMA_teamteach.ipynb
+++ b/_notebooks/2023-10-18-DTMA_teamteach.ipynb
@@ -7,10 +7,9 @@
     "---\n",
     "comments: true\n",
     "layout: post\n",
-    "title: our team teach lesson\n",
-    "courses: {csp: {week: 9} }\n",
+    "title: Our Team Teach\n",
+    "courses: {csp: {week: 10} }\n",
     "type: hacks\n",
-    "permalink: /teach/home\n",
     "---"
    ]
   },
