--- a/_notebooks/2023-10-24-DevelopingProcedures.ipynb
+++ b/_notebooks/2023-10-24-DevelopingProcedures.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Developing Procedures\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 10} }\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.12-3.13 Developing Procedures"
    ]
   },
