--- a/_notebooks/2023-11-06-Individual_final.ipynb
+++ b/_notebooks/2023-11-06-Individual_final.ipynb
@@ -146,7 +146,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reflection of Quiz"
+    "# Reflection of the Tri"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reflecting on my trimester in Computer Science Principles, I found the lessons on Booleans, algorithms, and developing procedures to be particularly enlightening. These fundamental concepts have not only broadened my understanding of computer science but have also had a profound impact on the way I approach problem-solving and programming.\n",
+    "\n",
+    "Booleans and Logic: Learning about Booleans and logical operators was like acquiring a new set of tools in my problem-solving toolkit. Understanding how to represent true and false values and apply logical operators like \"AND,\" \"OR,\" and \"NOT\" became essential for decision-making in programming. It made me more adept at creating conditions and controlling the flow of a program.\n",
+    "\n",
+    "Algorithms and Efficiency: The trimester's focus on algorithms provided me with a systematic approach to problem-solving. I realized that an algorithm is like a recipe for solving a specific problem, and crafting efficient algorithms is an art. Through exercises and assignments, I learned the importance of algorithmic efficiency and optimization, which can save time and resources in real-world applications.\n",
+    "\n",
+    "Developing Procedures: Developing procedures was a crucial lesson in my journey. It taught me how to break down complex tasks into smaller, manageable sub-tasks. I discovered the power of modular programming, where I could write reusable procedures to solve different parts of a problem. This not only made my code more organized but also facilitated collaboration and debugging.\n",
+    "\n",
+    "Application in Real-World Projects: The knowledge I gained about Booleans, algorithms, and procedures wasn't confined to the classroom. These concepts played a vital role in the development of my calorie calculator project. Using Booleans to check user inputs and control program logic, designing efficient algorithms for calorie calculations, and developing procedures for various parts of the application were all integral to the project's success.\n",
+    "\n",
+    "Problem-Solving Approach: These lessons changed the way I approach problem-solving. Instead of diving headfirst into coding, I've learned to start with a clear understanding of the problem, devise a well-thought-out algorithm, and then implement it through procedures. This structured approach has made me a more efficient and effective programmer.\n",
+    "\n",
+    "Adaptability and Versatility: The lessons on Booleans, algorithms, and procedures highlighted the versatility of computer science. I realized that these concepts are not limited to a specific programming language or application but can be applied in a wide range of contexts. This adaptability is a testament to the power of computer science as a problem-solving tool.\n",
+    "\n",
+    "In conclusion, the trimester's exploration of Booleans, algorithms, and procedures has been instrumental in my growth as a computer scientist. These concepts have provided me with a strong foundation in logical thinking, efficient problem-solving, and modular programming. As I continue my journey in computer science, I am eager to apply and expand upon these lessons in more complex projects and challenges, confident in the knowledge that they are the building blocks of innovation and creativity in the digital world."
    ]
   }
  ],
