--- a/_notebooks/2023-11-28-DigitalDivide.ipynb
+++ b/_notebooks/2023-11-28-DigitalDivide.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "## <font color = \"ADD8E6\"> YOUR answer </font>\n",
     "\n",
-    "Answer:"
+    "Answer: I could attempt to fix the digital divide in a poorer country without stable internet and computers to do work by starting a fundraiser for those who need interne tto get an education but can not due to lack of materials. Some things that are already being done are content creators like MR. BEAST who makes money through ads and re-uses it to donate. We can add by supporting our community and those who are donating."
    ]
   },
   {
@@ -398,16 +398,16 @@
     "\n",
     "Answer questions below with solely the letter name! Make sure to have your <mark>popcorn hack</mark> completed as well.\n",
     "\n",
-    "    - [] Question 1 \n",
-    "    - [] Question 2\n",
-    "    - [] Question 3\n",
-    "    - [] Question 4\n",
-    "    - [] Question 5\n",
-    "    - [] Question 6\n",
-    "    - [] Question 7\n",
-    "    - [] Question 8\n",
-    "    - [] Question 9\n",
-    "    - [] Question 10\n",
+    "    - [c] Question 1 \n",
+    "    - [d] Question 2\n",
+    "    - [b] Question 3\n",
+    "    - [a] Question 4\n",
+    "    - [a] Question 5\n",
+    "    - [a] Question 6\n",
+    "    - [a] Question 7\n",
+    "    - [a] Question 8\n",
+    "    - [c] Question 9\n",
+    "    - [d] Question 10\n",
     "\n"
    ]
   }
